[package]
name = "beek"
version = "0.1.1"
authors = ["mosm <airman515@gmail.com>", "Aaron <aaron.huntley2007@gmail.com>"]
edition = "2021"

[dependencies]
colored = "2.0.0"
combine = "4.6.0"
itertools = "0.10.1"
rand = "0.8.4"
ryu = "1.0.5"
statrs = "0.15.0"
thiserror = "1.0.26"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0.42"
atty = "0.2.14"
dirs = "4.0.0"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
structopt = "0.3.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.2.3", features = ["js"] }
wasm-bindgen = "0.2.74"

[lib]
name = "libbeek"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "beek"
path = "src/main.rs"
doc = false

[profile.release]
lto = true
